NIFI-15335 Added unit tests for property migration in Airtable, AMQP, Asana, ASN.1 and AWS bundles (#10653)
Signed-off-by: David Handermann <exceptionfactory@apache.org>