@@ -26,6 +26,7 @@ import org.apache.nifi.logging.ComponentLog;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.exception.ProcessException;
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.Test;
@@ -36,6 +37,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.TimeoutException;
 
@@ -130,7 +132,7 @@ public class ConsumeAMQPTest {
 
             runner.assertTransferCount(ConsumeAMQP.REL_SUCCESS, 1);
 
-            final MockFlowFile helloFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).get(0);
+            final MockFlowFile helloFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).getFirst();
             helloFF.assertContentEquals("hello");
 
 
@@ -159,7 +161,7 @@ public class ConsumeAMQPTest {
             TestRunner runner = initTestRunner(proc);
 
             runner.run();
-            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).get(0);
+            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).getFirst();
             assertNotNull(successFF);
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_ROUTING_KEY_ATTRIBUTE, "key1");
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_EXCHANGE_ATTRIBUTE, "myExchange");
@@ -190,7 +192,7 @@ public class ConsumeAMQPTest {
             TestRunner runner = initTestRunner(proc);
             runner.setProperty(ConsumeAMQP.HEADER_FORMAT, OutputHeaderFormat.JSON_STRING);
             runner.run();
-            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).get(0);
+            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).getFirst();
             assertNotNull(successFF);
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_ROUTING_KEY_ATTRIBUTE, "key1");
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_EXCHANGE_ATTRIBUTE, "myExchange");
@@ -226,14 +228,12 @@ public class ConsumeAMQPTest {
             runner.setProperty(ConsumeAMQP.HEADER_FORMAT, OutputHeaderFormat.ATTRIBUTES);
             runner.setProperty(ConsumeAMQP.HEADER_KEY_PREFIX, headerPrefix);
             runner.run();
-            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).get(0);
+            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).getFirst();
             assertNotNull(successFF);
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_ROUTING_KEY_ATTRIBUTE, "key1");
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_EXCHANGE_ATTRIBUTE, "myExchange");
             successFF.assertAttributeNotExists(AbstractAMQPProcessor.AMQP_HEADERS_ATTRIBUTE);
-            expectedHeadersMap.forEach((key, value) -> {
-                successFF.assertAttributeEquals(headerPrefix + "." + key, value.toString());
-            } );
+            expectedHeadersMap.forEach((key, value) -> successFF.assertAttributeEquals(headerPrefix + "." + key, value.toString()));
         }
     }
     @Test
@@ -259,7 +259,7 @@ public class ConsumeAMQPTest {
             TestRunner runner = initTestRunner(proc);
             runner.setProperty(ConsumeAMQP.HEADER_SEPARATOR, "|");
             runner.run();
-            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).get(0);
+            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).getFirst();
             assertNotNull(successFF);
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_ROUTING_KEY_ATTRIBUTE, "key1");
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_EXCHANGE_ATTRIBUTE, "myExchange");
@@ -296,7 +296,7 @@ public class ConsumeAMQPTest {
             TestRunner runner = initTestRunner(proc);
             runner.setProperty(ConsumeAMQP.REMOVE_CURLY_BRACES, "True");
             runner.run();
-            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).get(0);
+            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).getFirst();
             assertNotNull(successFF);
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_ROUTING_KEY_ATTRIBUTE, "key1");
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_EXCHANGE_ATTRIBUTE, "myExchange");
@@ -328,7 +328,7 @@ public class ConsumeAMQPTest {
             runner.setProperty(ConsumeAMQP.HEADER_SEPARATOR, "|");
 
             runner.run();
-            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).get(0);
+            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).getFirst();
             assertNotNull(successFF);
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_ROUTING_KEY_ATTRIBUTE, "key1");
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_EXCHANGE_ATTRIBUTE, "myExchange");
@@ -361,13 +361,37 @@ public class ConsumeAMQPTest {
             TestRunner runner = initTestRunner(proc);
 
             runner.run();
-            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).get(0);
+            final MockFlowFile successFF = runner.getFlowFilesForRelationship(ConsumeAMQP.REL_SUCCESS).getFirst();
             assertNotNull(successFF);
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_ROUTING_KEY_ATTRIBUTE, "key1");
             successFF.assertAttributeEquals(ConsumeAMQP.AMQP_EXCHANGE_ATTRIBUTE, "myExchange");
             String headers = successFF.getAttribute(AbstractAMQPProcessor.AMQP_HEADERS_ATTRIBUTE);
             assertEquals(EXPECTED_RESULT, headers);
         }
+    }
+
+    @Test
+    void testMigration() {
+        final TestRunner runner = initTestRunner(new ConsumeAMQP());
+        final Map<String, String> expectedRenamed = Map.ofEntries(
+                Map.entry("User Name", AbstractAMQPProcessor.USER.getName()),
+                Map.entry("ssl-context-service", AbstractAMQPProcessor.SSL_CONTEXT_SERVICE.getName()),
+                Map.entry("cert-authentication", AbstractAMQPProcessor.CLIENT_CERTIFICATE_AUTHENTICATION_ENABLED.getName()),
+                Map.entry("auto.acknowledge", ConsumeAMQP.AUTO_ACKNOWLEDGE.getName()),
+                Map.entry("batch.size", ConsumeAMQP.BATCH_SIZE.getName()),
+                Map.entry("prefetch.count", ConsumeAMQP.PREFETCH_COUNT.getName()),
+                Map.entry("header.format", ConsumeAMQP.HEADER_FORMAT.getName()),
+                Map.entry("header.key.prefix", ConsumeAMQP.HEADER_KEY_PREFIX.getName()),
+                Map.entry("header.separator", ConsumeAMQP.HEADER_SEPARATOR.getName()),
+                Map.entry("remove.curly.braces", ConsumeAMQP.REMOVE_CURLY_BRACES.getName())
+        );
+
+        final PropertyMigrationResult propertyMigrationResult = runner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
+
+        final Set<String> expectedRemoved = Set.of("ssl-client-auth");
+        assertEquals(expectedRemoved, propertyMigrationResult.getPropertiesRemoved());
+
     }
 
     private TestRunner initTestRunner(ConsumeAMQP proc) {
